--- a/survey.html
+++ b/survey.html
@@ -12,6 +12,14 @@
     <div class="container">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
+            <div class="nav_sidebar">
+                <ul class="links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#surveys">Surveys</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
             <h3>Survey Categories</h3>
             <ul>
                 <li><a href="#">Academic Feedback</a></li>
@@ -42,20 +50,20 @@
                 <div class="logo">
                     <img src="images/logo-jazan-uni2.png" alt="" width="100px">
                 </div>
-                <div class="text_title">
-                    <h1>Jazan University</h1>
-                    <p>Student Feedback Survey</p>
-                </div>
-            </header>
-
-            <nav>
+                <div class="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#surveys">Surveys</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-            </nav>
+                </div>
+
+                <div class="text_title">
+                    <h1>Jazan University</h1>
+                    <p>Student Feedback Survey</p>
+                </div>
+            </header>
 
             <section class="survey-form" id="home">
                 <h2>Student Satisfaction Survey</h2>
