--- a/survey.html
+++ b/survey.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jazan University Survey</title>
+    <!-- cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- main css file -->
     <link rel="stylesheet" href="style/style.css">
@@ -110,16 +111,16 @@
                         <label>Academic Level</label>
                         <div class="radio-group">
                             <div class="radio-option">
-                                <input type="radio" id="freshman" name="level" value="freshman"> Year 1
+                                <input type="radio" id="freshman" name="level" value="freshman - Year 1"> Year 1
                             </div>
                             <div class="radio-option">
-                                <input type="radio" id="sophomore" name="level" value="sophomore"> Year 2
+                                <input type="radio" id="sophomore" name="level" value="sophomore - Year 2"> Year 2
                             </div>
                             <div class="radio-option">
-                                <input type="radio" id="junior" name="level" value="junior"> Year 3
+                                <input type="radio" id="junior" name="level" value="junior  - Year 3"> Year 3
                             </div>
                             <div class="radio-option">
-                                <input type="radio" id="senior" name="level" value="senior"> Year 4
+                                <input type="radio" id="senior" name="level" value="senior  - Year 4"> Year 4
                             </div>
                         </div>
                         <div class="error" id="levelError">Please select your academic level</div>
@@ -129,16 +130,16 @@
                         <label>What aspects of the university are you satisfied with? (Select all that apply)</label>
                         <div class="checkbox-group">
                             <div class="checkbox-option">
-                                <input type="checkbox" id="faculty" name="satisfied" value="faculty"> Faculty quality
+                                <input type="checkbox" id="faculty" name="satisfied" value="Faculty quality"> Faculty quality
                             </div>
                             <div class="checkbox-option">
-                                <input type="checkbox" id="facilities" name="satisfied" value="facilities"> Campus facilities
+                                <input type="checkbox" id="facilities" name="satisfied" value="Campus facilities"> Campus facilities
                             </div>
                             <div class="checkbox-option">
-                                <input type="checkbox" id="library" name="satisfied" value="library"> Library resources
+                                <input type="checkbox" id="library" name="satisfied" value="Library resources"> Library resources
                             </div>
                             <div class="checkbox-option">
-                                <input type="checkbox" id="services" name="satisfied" value="services"> Student services
+                                <input type="checkbox" id="services" name="satisfied" value="Student services"> Student services
                             </div>
                         </div>
                     </div>
