--- a/survey.html
+++ b/survey.html
@@ -15,10 +15,10 @@
         <aside class="sidebar" id="sidebar">
             <div class="nav_sidebar">
                 <ul class="links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#surveys">Surveys</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="survey.html">Surveys</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <h3>Survey Categories</h3>
@@ -53,10 +53,10 @@
                 </div>
                 <div class="nav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#surveys">Surveys</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="survey.html">Surveys</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 </div>
 
