--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@
                 </div>
 
                 <div class="text_title">
-                    <h1>About Us</h1>
+                    <h1>Jazan University</h1>
+                    <p>About Us</p>
                 </div>
             </header>
 
