--- a/html/about.html
+++ b/html/about.html
@@ -7,9 +7,9 @@
     <!-- cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- main css file of sidebar -->
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <!-- main css about file -->
-     <link rel="stylesheet" href="style/about.css">
+     <link rel="stylesheet" href="../style/about.css">
 </head>
 <body>
     <div class="container">
@@ -17,10 +17,10 @@
         <aside class="sidebar" id="sidebar">
             <div class="nav_sidebar">
                 <ul class="links">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
             </div>
             <h3>Survey Categories</h3>
@@ -51,14 +51,14 @@
 
             <header>
                 <div class="logo">
-                    <img src="images/logo-jazan-uni2.png" alt="" width="100px">
+                    <img src="../images/logo-jazan-uni2.png" alt="" width="100px">
                 </div>
                 <div class="nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
                 </div>
 
@@ -84,7 +84,7 @@
                     <p>Our initiative is supported by a dedicated team of faculty, administrators, and student representatives who are committed to fostering open communication between students and the university leadership. We work together to ensure that every voice is heard and every concern is addressed.</p>
                     
                     <h4 class="title">Impact and Benefits</h4>
-                    <ul>
+                    <ul class="about-list">
                         <li><strong>Enhancing Academic Quality:</strong> Feedback helps improve teaching methods, course materials, and overall student learning experiences.</li>
                         <li><strong>Improving Campus Facilities:</strong> Student input guides enhancements in libraries, study areas, and laboratories.</li>
                         <li><strong>Optimizing Administrative Services:</strong> Registration, financial aid, and student support services become more efficient and student-friendly.</li>
