--- a/html/survey.html
+++ b/html/survey.html
@@ -7,7 +7,7 @@
     <!-- cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- main css file -->
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,10 +15,10 @@
         <aside class="sidebar" id="sidebar">
             <div class="nav_sidebar">
                 <ul class="links">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
             </div>
             <h3>Survey Categories</h3>
@@ -49,14 +49,14 @@
 
             <header>
                 <div class="logo">
-                    <img src="images/logo-jazan-uni2.png" alt="" width="100px">
+                    <img src="../images/logo-jazan-uni2.png" alt="" width="100px">
                 </div>
                 <div class="nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
                 </div>
 
@@ -73,19 +73,19 @@
                 <form id="surveyForm">
                     <div class="form-group">
                         <label for="fullname">Full Name</label>
-                        <input type="text" id="fullname" name="fullname" required>
+                        <input type="text" id="fullname" name="fullname" >
                         <div class="error" id="nameError">Please enter your full name</div>
                     </div>
 
                     <div class="form-group">
                         <label for="email">University Email</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email">
                         <div class="error" id="emailError">Please enter a valid university email</div>
                     </div>
 
                     <div class="form-group">
                         <label for="college">College/Faculty</label>
-                        <select class="select-box" id="college" name="college" required>
+                        <select class="select-box" id="college" name="college" >
                                 <option value="">Select your college</option>
                                 <option value="medicine">College of Medicine</option>
                                 <option value="dentistry">College of Dentistry</option>
@@ -148,7 +148,7 @@
                         <label for="suggestions">Suggestions for improvement</label>
                         <textarea id="suggestions" name="suggestions" rows="10"></textarea>
                     </div>
-                    <button type="submit">Submit Survey</button>
+                    <button type="submit" onclick="submitSurveyForm()">Submit Survey</button>
                 </form>
             </section>
 
