--- a/html/contact.html
+++ b/html/contact.html
@@ -7,9 +7,9 @@
     <!-- cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- main css file -->
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <!-- main css file contact -->
-     <link rel="stylesheet" href="style/contact.css">
+     <link rel="stylesheet" href="../style/contact.css">
 </head>
 <body>
     <div class="container">
@@ -17,10 +17,10 @@
         <aside class="sidebar" id="sidebar">
             <div class="nav_sidebar">
                 <ul class="links">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
             </div>
             <h3>Quick Links</h3>
@@ -51,14 +51,14 @@
 
             <header>
                 <div class="logo">
-                    <img src="images/logo-jazan-uni2.png" alt="Jazan University Logo" width="100px">
+                    <img src="../images/logo-jazan-uni2.png" alt="Jazan University Logo" width="100px">
                 </div>
                 <div class="nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
                 </div>
 
@@ -108,19 +108,19 @@
                     <form id="contactForm">
                         <div class="form-group">
                             <label for="contact-name">Full Name</label>
-                            <input type="text" id="contact-name" name="name" required>
+                            <input type="text" id="contact-name" name="name" >
                             <div class="error" id="nameError">Please enter your name</div>
                         </div>
 
                         <div class="form-group">
                             <label for="contact-email">Email Address</label>
-                            <input type="email" id="contact-email" name="email" required>
+                            <input type="email" id="contact-email" name="email" >
                             <div class="error" id="emailError">Please enter a valid email</div>
                         </div>
 
                         <div class="form-group">
                             <label for="contact-subject">Subject</label>
-                            <select id="contact-subject" name="subject" required>
+                            <select id="contact-subject" name="subject" >
                                 <option value="">Select a subject</option>
                                 <option value="admissions">Admissions Inquiry</option>
                                 <option value="academics">Academic Programs</option>
@@ -133,11 +133,11 @@
 
                         <div class="form-group">
                             <label for="contact-message">Your Message</label>
-                            <textarea id="contact-message" name="message" rows="6" required></textarea>
+                            <textarea id="contact-message" name="message" rows="6" ></textarea>
                             <div class="error" id="messageError">Please enter your message</div>
                         </div>
 
-                        <button type="submit">Send Message</button>
+                        <button type="submit" onclick="submitSurveyForm()">Send Message</button>
                     </form>
                 </div>
 
