--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
               <aside class="sidebar" id="sidebar">
                 <div class="nav_sidebar">
                     <ul class="links">
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="survey.html">Surveys</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Services</a></li>
+                        <li><a href="../html/about.html">About</a></li>
+                        <li><a href="../html/survey.html">Survey</a></li>
+                        <li><a href="../html/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <h3>Survey Categories</h3>
@@ -54,10 +54,10 @@
                 </div>
                 <div class="nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="survey.html">Surveys</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Services</a></li>
+                    <li><a href="../html/about.html">About</a></li>
+                    <li><a href="../html/survey.html">Survey</a></li>
+                    <li><a href="../html/contact.html">Contact</a></li>
                 </ul>
                 </div>
 
