--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <option value="univ_darb">University College (Al-Darb Branch)</option>
                             <option value="industrial">Industrial Applications College (Bish Branch)</option>
                         </select>
-                        <div class="error" id="collegeError">Please select your college</div>
+                        <!-- <div class="error" id="collegeError">Please select your college</div> -->
                     </div>
 
                     <div class="form-group" required>
@@ -277,7 +277,7 @@
                                 <input type="radio" id="senior" name="level" value="senior  - Year 4"> Year 4
                             </div>
                         </div>
-                        <div class="error" id="levelError">Please select your academic level</div>
+                        <!-- <div class="error" id="levelError">Please select your academic level</div> -->
                     </div>
 
                     <div class="form-group">
@@ -359,7 +359,7 @@
                         <div class="form-group">
                             <label for="contact-email">Email Address</label>
                             <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                            <div class="error" id="emailError">Please enter a valid email</div>
+                            <!-- <div class="error" id="emailError">Please enter a valid email</div> -->
                         </div>
 
                         <div class="form-group">
@@ -372,19 +372,19 @@
                                 <option value="media">Media Inquiry</option>
                                 <option value="general">General Inquiry</option>
                             </select>
-                            <div class="error" id="subjectError">Please select a subject</div>
+                            <!-- <div class="error" id="subjectError">Please select a subject</div> -->
                         </div>
 
                         <div class="form-group">
                             <label for="contact">Mobile Number</label>
-                            <input type="tel" id="contact" name="contact" placeholder="05XXXXXXXX">
+                            <input type="tel" id="contact" name="contact" class="contact" placeholder="05XXXXXXXX">
                             <div class="status" id="contactStatus"></div>
                         </div>
 
                         <div class="form-group">
                             <label for="contact-message">Your Message</label>
                             <textarea id="contact-message" name="message" rows="6"></textarea>
-                            <div class="error" id="messageError">Please enter your message</div>
+                            <!-- <div class="error" id="messageError"></div>Please enter your message -->
                         </div>
 
                         <button type="submit" onclick="submitSurveyForm()">Send Message</button>
