--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <div class="form-group">
                             <label for="contact-email">Email Address</label>
                             <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                            <!-- <div class="error" id="emailError">Please enter a valid email</div> -->
+                            <div class="error" id="emailError">Please enter a valid email</div>
                         </div>
 
                         <div class="form-group">
@@ -402,11 +402,11 @@
             </section>
             <footer>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/JazanUniversity" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/JazanUniversity" target="_blank" ><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/jazanuniversity/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/school/jazan-university/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com/user/JazanUniversity" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
                 <p>&copy; 2025 Jazan University. All rights reserved.</p>
             </footer>
@@ -415,5 +415,4 @@
     <!-- main javascript file -->
     <script src="script/script.js"></script>
 </body>
-
 </html>
